--- a/groom.html
+++ b/groom.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Engagement</title>
+    <title>Groom</title>
     <style>
         * {
     margin: 0;
@@ -15,13 +15,13 @@
 body {
     background: #f5f5f5;
     padding: 20px;
+    text-align: center;
 }
 h2 {
     font-size: 28px;
     font-weight: 600;
     margin-bottom: 20px;
     letter-spacing: 1px;
-    margin-left: 35%;
 }
 
 hr {
@@ -119,5 +119,6 @@ hr {
 
     </script>
 </body>
+
 
 </html>
