--- a/mehandi.html
+++ b/mehandi.html
@@ -15,13 +15,14 @@
 body {
     background: #f5f5f5;
     padding: 20px;
+    text-align: center;
 }
 h2 {
     font-size: 28px;
     font-weight: 600;
     margin-bottom: 20px;
     letter-spacing: 1px;
-    margin-left: 35%;
+    
 }
 
 hr {
@@ -119,5 +120,6 @@ hr {
 
     </script>
 </body>
+
 
 </html>
