--- a/couple.html
+++ b/couple.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Engagement</title>
+    <title>Couple</title>
     <style>
         * {
     margin: 0;
@@ -123,3 +123,4 @@ hr {
 
 
 </html>
+
